# routes/index.js
@@ -5,6 +5,7 @@ const router = express.Router();
 
 router.get('/', helloController.sayHello);
 router.use('/api-docs', require('./swagger'));
+router.use('/auth', require('./auth'));
 router.use('/projects', require('./projects'));
 router.use('/tasks', require('./tasks'));
 
